<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="?android:attr/selectableItemBackground">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="关于"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="?attr/colorOnSurface"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textColor="?attr/colorOnSurface"
        android:textSize="16sp"
        android:lineSpacingExtra="4dp"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about2"
        android:textColor="?attr/colorOnSurface"
        android:textSize="16sp"
        android:lineSpacingExtra="4dp"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:id="@+id/dialog_command"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about3"
        android:textColor="?attr/colorPrimary"
        android:textSize="14sp"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:id="@+id/dialog_message2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about4"
        android:textColor="?attr/colorOnSurface"
        android:textSize="16sp"
        android:lineSpacingExtra="4dp"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:id="@+id/dialog_message3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about5"
        android:textColor="?attr/colorPrimary"
        android:textSize="14sp"
        android:layout_marginBottom="24dp"/>

</LinearLayout>
